2009-02-26  Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: update detection for sles11, opensuse11.1
	  rpm builds will be broken for a bit longer in trunk

2009-02-26  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/amgtar_perl.pl,
          application-src/amlog-script.pl,
          application-src/ampgsql.pl,
          application-src/amsamba.pl,
          application-src/amsuntar.pl,
          application-src/amzfs-sendrecv.pl,
          application-src/amzfs-snapshot.pl,
          application-src/script-email.pl,
          perl/Amanda/Application.swg,
          perl/Amanda/Script.pm,
          perl/Amanda/Script_App.pm:
	  load config-name/amanda-client.conf as well as amanda-client.conf

2009-02-26  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl,
	  installcheck/amgtar.pl,
	  installcheck/ampgsql.pl: use $@ to get eval errors (not $!)

2009-02-25  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/amoracle.pl,
	  application-src/ampgsql.pl,
	  example/amanda-client-oracle.conf.in,
	  example/amanda-client-postgresql.conf.in,
	  installcheck/ampgsql.pl,
	  man/xml-source/ampgsql.8.xml: bring amoracle and ampgsql properties
	  in line with conventions

2009-02-24  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, application-src/amgtar.c,
	  changer-src/scsi-changer-driver.c, client-src/client_util.c,
	  common-src/conffile.c, device-src/s3-device.c,
	  oldrecover-src/set_commands.c, recover-src/set_commands.c,
	  server-src/amindexd.c, server-src/planner.c,
	  server-src/reporter.c: Replace all occurences of index by strchr,
	                         Replace all occurences of rindex by strrchr.

2009-02-24  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3.c: make s3_list_keys use its own buffer

2009-02-24  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3.c: fix error buffer handling of overflow data

2009-02-24  Dustin J. Mitchell <dustin@zmanda.com>